# VantaStalker-desktop

./: .gitignore  README.md  package-lock.json  package.json  start.sh  targets.txt
rust-app/: Cargo.toml
rust-app/src/: app.rs  main.rs
rust-app/src/core/: auth_prober.rs  collaborator.rs  config.rs  db.rs  diffing.rs  fuzzer.rs  jwt.rs  mod.rs  models.rs  passive.rs  reporting.rs  scripting.rs  sitemap.rs  ssl.rs  websockets.rs
rust-app/src/ui/: active_scanner.rs  auth.rs  collaborator.rs  crawler.rs  dashboard.rs  decoder.rs  diffing.rs  history.rs  interceptor.rs  intruder.rs  jwt.rs  mod.rs  port_scanner.rs  recon.rs  repeater.rs  scope.rs  scripting.rs  sitemap.rs  sniffer.rs  syntax.rs  websockets.rs
src/: index.ts
