[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
url = "2.5.7"
base64 = "0.22.1"
percent-encoding = "2.3.2"
egui_extras = "0.29.1"
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
scraper = "0.25.0"
rayon = "1.11.0"
rfd = "0.16.0"
md-5 = "0.10.6"
rusqlite = { version = "0.38.0", features = ["bundled"] }
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
urlencoding = "2.1"
egui_plot = "0.29"
pnet = "0.35"
chrono = "0.4"
toml = "0.9.10"
directories = "6.0.0"
axum = "0.8.8"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
similar = "2.7.0"
rhai = "1.23.6"
